# Zia

./: .gitignore  CMakeLists.txt  Contributing.md  Doxyfile  README.md  conanfile.txt  config.yml  main.cpp  pipelines.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
cmake/: Findcatch2.cmake  Findyaml-cpp.cmake  Findziapi.cmake
docs/: main.cpp
docs/http_module/: main.cpp  validConfig.yml
docs/https_module/: generateCertificate.sh  main.cpp  validConfig.yml  validConfigWithoutCertificate.yml
files/: test.py
files/dns/: README.md  db.zia-php-cgi.com  db.zia-reverse-proxy.com
include/: CMakeLists.txt  CommandLine.hpp  Core.hpp
libs/: CMakeLists.txt
libs/HttpFormatter/: CMakeLists.txt
libs/HttpFormatter/include/: HttpFormatter.hpp
libs/HttpFormatter/src/: HttpFormatter.cpp
libs/HttpFormatter/tests/: CMakeLists.txt  test_HttpFormatter.cpp
libs/HttpParser/: CMakeLists.txt
libs/HttpParser/include/: Exception.hpp  HttpParser.hpp
libs/HttpParser/src/: HttpParser.cpp
libs/HttpParser/tests/: CMakeLists.txt  test_HttpParser.cpp
libs/Logger/: CMakeLists.txt  README.md
libs/Logger/include/: Logger.hpp
libs/Logger/src/: Logger.cpp
libs/Logger/tests/: CMakeLists.txt  test_Logger.cpp
libs/RequestReceptionTime/: CMakeLists.txt  README.md
libs/RequestReceptionTime/include/: RequestReceptionTime.hpp
libs/RequestReceptionTime/src/: RequestReceptionTime.cpp
libs/api/: CMakeLists.txt  Placeholder.hpp
libs/cgi/: CMakeLists.txt  README.md  entrypoint.cpp
libs/cgi/include/: Cgi.hpp
libs/cgi/src/: Cgi.cpp
libs/config_parser/: CMakeLists.txt
libs/config_parser/include/: ConfigParser.hpp
libs/config_parser/src/: ConfigParser.cpp
libs/config_parser/tests/: CMakeLists.txt  test_file.txt  testsConfigParser.cpp
libs/env_manager/: CMakeLists.txt
libs/env_manager/include/: EnvManager.hpp  VariableAlreadyDefinedException.hpp  VariableNotFoundException.hpp
libs/env_manager/src/: EnvManager.cpp
libs/executor/: CMakeLists.txt
libs/executor/include/: Executor.hpp
libs/executor/src/: Executor.cpp
libs/http/: CMakeLists.txt
libs/http/include/: AsioTcpListener.hpp  CMakeLists.txt  HttpModule.hpp  RequestOutputQueue.hpp  ResponseInputQueue.hpp
libs/http/src/: CMakeLists.txt  HttpModule.cpp  RequestOutputQueue.cpp  ResponseInputQueue.cpp
libs/http_module/: CMakeLists.txt  README.md
libs/http_module/include/: CMakeLists.txt  HttpModule.hpp  RequestOutputQueue.hpp  ResponseInputQueue.hpp
libs/http_module/src/: HttpModule.cpp  ResponseInputQueue.cpp
libs/http_module/tests/: CMakeLists.txt  HttpModuleTests.cpp  invalidPortConfig.yml  validConfig.yml
libs/https_module/: CMakeLists.txt  README.md
libs/https_module/include/: CMakeLists.txt  HttpsModule.hpp
libs/https_module/src/: CMakeLists.txt  HttpsModule.cpp
libs/https_module/tests/: CMakeLists.txt  HttpsModuleTests.cpp  invalidPortConfig.yml  noModuleConfig.yml  validConfig.yml
libs/https_module/tests/client_for_testing/: CMakeLists.txt  main.cpp
libs/loader/: CMakeLists.txt
libs/loader/include/: Loader.hpp
libs/loader/tests/: CMakeLists.txt  loader.cpp
libs/loader/tests/mockLib/: code.cpp
libs/network/: CMakeLists.txt
libs/network/helper/: CMakeLists.txt
libs/network/helper/include/: CMakeLists.txt  Errors.hpp  ITCPClient.hpp  ITCPListener.hpp
libs/network/http/: CMakeLists.txt
libs/network/http/include/: AsioHttpClient.hpp  AsioHttpListener.hpp  CMakeLists.txt  RequestHelper.hpp
libs/network/http/src/: AsioHttpClient.cpp  AsioHttpListener.cpp  CMakeLists.txt  RequestHelper.cpp
libs/network/http/tests/: AsioHttpClientTests.cpp  CMakeLists.txt  RequestHelperTests.cpp
libs/network/https/: CMakeLists.txt
libs/network/https/include/: AsioHttpsClient.hpp  AsioHttpsListener.hpp  CMakeLists.txt
libs/network/https/src/: AsioHttpsClient.cpp  AsioHttpsListener.cpp  CMakeLists.txt
libs/network/https/tests/: CMakeLists.txt
libs/network/include/: CMakeLists.txt  ITCPClient.hpp  ITCPListener.hpp  Utility.hpp
libs/network/include/http/: AsioHttpClient.hpp  AsioHttpListener.hpp  CMakeLists.txt
libs/network/include/socket/: Errors.hpp  Utility.hpp
libs/network/include/socket/tcp/: AsioTCPClient.hpp  AsioTCPListener.hpp  ITCPClient.hpp  ITCPListener.hpp
libs/network/src/: CMakeLists.txt
libs/network/src/http/: AsioHttpClient.cpp  AsioHttpListener.cpp  CMakeLists.txt
libs/php_cgi/: CMakeLists.txt
libs/php_cgi/include/: Cgi.hpp
libs/php_cgi/src/: Cgi.cpp
libs/queues/: CMakeLists.txt
libs/queues/include/: CMakeLists.txt  RequestOutputQueue.hpp  ResponseInputQueue.hpp
libs/queues/src/: CMakeLists.txt  RequestOutputQueue.cpp  ResponseInputQueue.cpp
libs/queues/tests/: CMakeLists.txt  RequestOutputQueueTests.cpp  ResponseInputQueueTests.cpp
libs/reverse_proxy/: CMakeLists.txt  README.md  entrypoint.cpp
libs/reverse_proxy/include/: ReverseProxy.hpp
libs/reverse_proxy/src/: Converter.cpp  ReverseProxy.cpp
libs/static_serve/: CMakeLists.txt  README.md  entrypoint.cpp
libs/static_serve/include/: StaticServe.hpp
libs/static_serve/src/: StaticServe.cpp
libs/thread_pool/: CMakeLists.txt
libs/thread_pool/include/: ThreadPool.hpp
libs/thread_pool/src/: ThreadPool.cpp
libs/vhosts/: CMakeLists.txt  README.md  entrypoint.cpp
libs/vhosts/include/: Converter.hpp  Vhosts.hpp
libs/vhosts/src/: Converter.cpp  Vhosts.cpp
src/: CMakeLists.txt  CommandLine.cpp  Core.cpp
tests/: CMakeLists.txt  config_tests.yml  functionnal_tests.sh  placeholder.cpp  test1.txt  test2.ref.txt  test2.txt  test3.ref.txt  test8.txt  test9.txt
