add_subdirectory(HttpParser)
add_subdirectory(loader)
add_subdirectory(HttpFormatter)
add_subdirectory(config_parser)
add_subdirectory(RequestReceptionTime)
add_subdirectory(network)
add_subdirectory(queues)
add_subdirectory(http_module/)
add_subdirectory(executor)
add_subdirectory(env_manager)
add_subdirectory(cgi)
add_subdirectory(thread_pool)
add_subdirectory(static_serve)
